# MultiProcessPipelines

./: README.md  pyproject.toml  requirements.txt  setup.py
multiprocesspipelines/: __init__.py  module.py  pipeline.py  tag_factory.py  tags.py  tools.py
