[tool.poetry]
name = "multiprocesspipelines"
version = "0.1.0"
description = "\"A package for creating modular pipelines which can run in parallel on node clusters with a shared file system"
authors = ["Martin <martin.alvarez.kuglen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
multiprocesstools = {path = "/Users/martinak/Documents/GitHub/MultiProcessTools"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
